2005-07-07  Stepan Kasal  <kasal@ucw.cz>

	* tests/local.at (AT_CONFIG_CMP): Revert Paul's previous change.

	* lib/autoconf/status.m4 (_AC_OUTPUT_SUBDIRS): Report the full
	path, too; insert a "===" to emphasize the line.

2005-07-06  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: New macro AC_C_TYPEOF.
	* doc/autoconf.texi (C Compiler): Document AC_C_TYPEOF.
	* lib/autoconf/c.m4 (AC_C_TYPEOF): New macro.
	* tests/c.at (C keywords): Test AC_C_TYPEOF.

	Fix problems reported by Nicolas Joly.
	* tests/base.at (Input/Output): Ignore 'loading site script' chatter.
	* tests/local.at (AT_CONFIG_CMP): Ignore lines like "LIBS=''" too.
	They are generated by the Tru64 v5.1B shell.

2005-07-05  Stepan Kasal  <kasal@ucw.cz>

	Fix my changes from 2005-07-01; reported by Noah Misch.
	* lib/autoconf/status.m4 (_AC_CONFIG_DEPENDENCIES): Fix the
	description, the macro now accepts only a single tag.
	(_AC_CONFIG_UNIQUE): Likewise; s/AC_File/[$1]/

	Fix cases when the varsions of Autoconf and Autotest don't match.
	Reported by Noah Misch.
	* lib/autoconf/autotest.m4 (AC_CONFIG_TESTDIR): Set also
	at_top_builddir, for compatibility with older autotest.
	* lib/autotest/general.m4 (AT_INIT): If at_top_build_prefix
	is not set, use at_top_builddir, for compatibility with older
	versions of autoconf.

2005-07-04  Paul Eggert  <eggert@cs.ucla.edu>

	* bin/autom4te.in ($m4): Catch usages like --nesting-limit=2048.
	Problem reported by Patrick Welche.

2005-07-03  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/general.m4 (AC_ARG_PROGRAM): Use &, not |, in
	sed substitution command, so that we allow | in program prefixes
	and program suffixes.  (& is a problem anyway; we're not fixing
	that here.)
	* lib/autoconf/status.m4 (AC_CONFIG_FILES): Likewise, for
	configure_input, top_builddir, srcdir, etc.
	* lib/autotest/general.m4 (AT_INIT): Likewise, for
	PATH_SEPARATOR in AUTOTEST_PATH.

2005-07-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/autoconf/general.m4 (AC_SITE_LOAD): Rewrite the